--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ buildscript {
         jcenter()
         google()
         mavenCentral()
+        maven {url 'https://jitpack.io'}
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:7.1.2'
@@ -20,6 +21,7 @@ allprojects {
         jcenter()
         google()
         mavenCentral()
+        maven {url 'https://jitpack.io'}
     }
 }
 
