--- a/gradle.properties
+++ b/gradle.properties
@@ -15,3 +15,4 @@
 #Fri Nov 27 17:31:11 CST 2015
 android.enableJetifier=true
 android.useAndroidX=true
+android.disableAutomaticComponentCreation=true
