--- a/build.gradle
+++ b/build.gradle
@@ -2,14 +2,13 @@
 
 buildscript {
     repositories {
-        jcenter()
         google()
         mavenCentral()
         maven {url 'https://jitpack.io'}
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:7.1.2'
-        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.4'
+        //classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.4'
         classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -18,7 +17,6 @@ buildscript {
 
 allprojects {
     repositories {
-        jcenter()
         google()
         mavenCentral()
         maven {url 'https://jitpack.io'}
