--- a/gradle.properties
+++ b/gradle.properties
@@ -15,6 +15,6 @@
 #Fri Nov 27 17:31:11 CST 2015
 android.enableJetifier=true
 android.useAndroidX=true
-android.overridePathCheck=true
+#android.overridePathCheck=true
 android.disableAutomaticComponentCreation=true
 org.gradle.java.home=D\:\\Program Files\\Java\\jdk-11.0.15.1
