--- a/parallaxbacklayout/build.gradle
+++ b/parallaxbacklayout/build.gradle
@@ -2,29 +2,29 @@ apply plugin: 'com.android.library'
 apply plugin: 'maven-publish'
 
 //apply plugin: 'com.github.dcendents.android-maven'
-group='com.gitee.qjcjob'
+//group='com.gitee.UserNameQc'
 
-ext {
-    bintrayRepo = 'maven'
-
-    libraryName = 'parallaxbacklayout'
-    artifact = 'parallaxbacklayout'
-
-    libraryDescription = 'An Android library that help you to finish activity with swipe back gesture and you can get parallax scrolling effect'
-
-    siteUrl = 'https://gitee.com/qjcjob/parallax-back'
-    gitUrl = 'https://gitee.com/qjcjob/parallax-back.git'
-
-    libraryVersion = '1.1.8'
-
-    developerId = 'qjcjob'
-    developerName = 'qiaojunchao'
-    developerEmail = 'qjcjob@126.com'
-
-    licenseName = 'The Apache Software License, Version 2.0'
-    licenseUrl = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
-    allLicenses = ["Apache-2.0"]
-}
+//ext {
+//    bintrayRepo = 'maven'
+//
+//    libraryName = 'parallaxbacklayout'
+//    artifact = 'parallaxbacklayout'
+//
+//    libraryDescription = 'An Android library that help you to finish activity with swipe back gesture and you can get parallax scrolling effect'
+//
+//    siteUrl = 'https://gitee.com/qjcjob/parallax-back'
+//    gitUrl = 'https://gitee.com/qjcjob/parallax-back.git'
+//
+//    libraryVersion = '1.1.8'
+//
+//    developerId = 'qjcjob'
+//    developerName = 'qiaojunchao'
+//    developerEmail = 'qjcjob@126.com'
+//
+//    licenseName = 'The Apache Software License, Version 2.0'
+//    licenseUrl = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+//    allLicenses = ["Apache-2.0"]
+//}
 
 
 android {
@@ -34,7 +34,7 @@ android {
         minSdkVersion 21
         targetSdkVersion 32
         versionCode 6
-        versionName libraryVersion
+        versionName '1.0.0'
     }
     buildTypes {
         release {
