--- a/gradle.properties
+++ b/gradle.properties
@@ -17,4 +17,4 @@ android.enableJetifier=true
 android.useAndroidX=true
 #android.overridePathCheck=true
 android.disableAutomaticComponentCreation=true
-org.gradle.java.home=D\:/Program Files/Java/jdk-11.0.15.1
+#org.gradle.java.home=D\:/Program Files/Java/jdk-11.0.15.1
