--- a/parallaxbacklayout/build.gradle
+++ b/parallaxbacklayout/build.gradle
@@ -1,5 +1,5 @@
 apply plugin: 'com.android.library'
-apply plugin: 'maven-publish'
+//apply plugin: 'maven-publish'
 
 //apply plugin: 'com.github.dcendents.android-maven'
 //group='com.gitee.UserNameQc'
@@ -26,6 +26,23 @@ apply plugin: 'maven-publish'
 //    allLicenses = ["Apache-2.0"]
 //}
 
+//afterEvaluate{
+//    publishing {
+//        publications {
+//            // 这个mavenJava可以随便填，只是一个任务名字而已
+//            // MavenPublication必须有，这个是调用的任务类
+//            mavenJava(MavenPublication) {
+//                from components.release
+//                // 这里头是artifacts的配置信息，不填会采用默认的
+//                groupId = 'com.github.anzewei.parallaxbacklayout'
+//                artifactId = 'parallaxbacklayout'
+//                version = '1.0.0'
+//            }
+//        }
+//    }
+//}
+
+
 
 android {
     compileSdkVersion 32
@@ -44,6 +61,8 @@ android {
     }
 
 }
+
+
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
